Allow Indexing with Java 8
Should enable seamless Op indexing in ImgLib2 projects